--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -270,6 +270,7 @@
                 <div class="select-arrow"></div>
             </div>
             <div class="address-preview" id="addressPreview"></div>
+            <a href="/addAddress">Add Address</a>
         </div>
 
         <!-- Payment Section -->
