--- a/views/admin/admin-viewDetails.ejs
+++ b/views/admin/admin-viewDetails.ejs
@@ -247,7 +247,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
     <script>
         async function updateStatus(orderId) {
             const { value: status } = await Swal.fire({
