--- a/views/admin/orderList.ejs
+++ b/views/admin/orderList.ejs
@@ -78,7 +78,7 @@
                                        class="btn btn-primary btn-sm">
                                         View Details
                                     </a>
-                                    <% if (order.status !== 'cancelled' && order.status !== 'delivered') { %>
+                                    <% if (order.status !== 'Cancelled' && order.status !== 'Delivered') { %>
                                         <button onclick="updateStatus('<%= order._id %>')" 
                                                 class="btn btn-info btn-sm">
                                             Update Status
