--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -304,6 +304,9 @@
 .sidebar a, .sidebar i {
     transition: all 0.3s ease-in-out;
 }
+.footer-content{
+  z-index: 1000;
+}
   </style>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
