--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -153,7 +153,7 @@
                         <%=coupons[i].isList%>
                       </td>
                       <td class="text-start">
-                        <a href="/admin/editCoupon?id=<%=coupons[i]._id%>" class="btn btn-primary btn-sm">Edit</a>
+                        <a href="/admin/editCoupon/<%=coupons[i]._id%>" class="btn btn-primary btn-sm">Edit</a>
 
 
                         <a href="#" onclick="confirmDelete('<%=coupons[i]._id%>')" class="btn btn-danger btn-sm"
